# Argentum

./: .gitignore  Architecture  CMakeLists.txt  Doxyfile.in  Kernel.c  Kernel.h  Makefile  Memory.h  Taskie.includes  TaskieKernel  kernel  make.sh  make_debug.sh  make_deploy.sh  make_n_deploy.sh  make_n_run.sh  make_run.sh  make_usb.sh  readme.md  toolchain.cmake
Core/: AsciiHeader.h  CMakeLists.txt  Kernel.c  Kernel.h  Memory.c  Screen.c  Screen.h  Types.h  Utilities.c  Utilities.h
Core/ACPI/: ACPI.c  ACPI.h
Core/ATA/: ATA.c  ATA.h
Core/Clib/include/: assert.h  errno.h  setjmp.h  signal.h  stddef.h  stdio.h  stdlib.h  string.h  time.h
Core/Clib/math/: asin.c  ceil.c  exp.c  log.c  log2.c  pow.c  sqrt.c  srand.c
Core/Clib/stdio/: fflush.c  fopen.c  fseek.c  fwrite.c  putchar.c
Core/Clib/stdlib/: Absolute.c  abort.c  abs.c  exit.c  free.c  malloc.c  strtod.c  system.c
Core/Clib/string/: atoi.c  isspace.c  itoa.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strcmp.c  strerror.c  strlen.c  strncmp.c  (+3 more)
Core/Filesystem/: FilesystemInterface.txt
Core/IO/: IO.c  IO.h
Core/Interrupt/: Interrupt.asm  Interrupt.c  Interrupt.h
Core/Keyboard/: Keyboard.asm  Keyboard.c  Keyboard.h  Keyboard.s
Core/LinkedList/: LinkedList.c  LinkedList.h  LinkedListItem.c  LinkedListItem.h  TestLinkedList.c  TestLinkedList.h  TestLinkedListItem.c  TestLinkedListItem.h
Core/Memory/: Memory.c  Memory.h
Core/PCI/: PCI.c  PCI.h
Core/Scheduler/: Scheduler.c  Scheduler.h  Task.c  Task.h
Core/Screen/: Screen.c  Screen.h
Core/Structures/: LinkedList.c  LinkedList.h
(+622 files in other folders)
